--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
           </nav>
       </section>
-      <section class="container mb-5 d-flex justify-content-between">
+      <section class="container mb-5 d-flex justify-content-between ">
         <div class="w-50">
           <img class="img-fluid" src="images/Group 33092.png" alt="">
         </div>
@@ -55,17 +55,17 @@
           </h1>
            <p> Lorem Ipsum is simply dummy text of the printing 
              and typesetting industry.</p>
-             <button class="btn text-white"><img src="icons/shopping-cart 1.png" alt=""> BUY NOW</button>
+             <button class="btn text-white px-0 py-2"><img src="icons/shopping-cart 1.png" alt=""> BUY NOW</button>
            </div> 
         </div>
       </section>
     </header>
     <main>
-      <section class="container shoes-part mb-5">
+      <section class="container shoes-part my-5">
         <h2 class="nike-black">CASUAL SHOES</h2>
         <div class="container pt-3">
           <div class="row gy-5">
-            <div class="col-4">
+            <div class="col-lg-4 col-xl-4 col-md-6 col-sm-12 shadow-sm rounded-4">
               <div class="p-2">
                 <div class="shoe-photo rounded-4 mb-3">
                   <img class="img-fluid" src="images/Daco_1703273 1.png" alt="">
@@ -78,7 +78,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-xl-4 col-md-6 col-sm-12">
               <div class="p-2">
                 <div class="shoe-photo rounded-4 mb-3">
                   <img class="img-fluid short-photo" src="images/pngegg 1.png" alt="">
@@ -94,7 +94,7 @@
 
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-xl-4 col-md-6 col-sm-12">
               <div class="p-2">
                 <div class="shoe-photo rounded-4 mb-3">
                   <img class="img-fluid" src="images/image 5.png" alt="">
@@ -114,11 +114,11 @@
         </div>
 
       </section>
-      <section class="container shoes-part mt-5">
+      <section class="container shoes-part my-5">
         <h2 class="nike-black">FORMAL SHOES</h2>
         <div class="container pt-3">
           <div class="row gy-5">
-            <div class="col-4">
+            <div class="col-lg-4 col-xl-4 col-md-6 col-sm-12">
               <div class="p-2">
                 <div class="shoe-photo rounded-4 mb-3">
                   <img class="img-fluid" src="images/Rectangle 39.png" alt="">
@@ -131,7 +131,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-xl-4 col-md-6 col-sm-12">
               <div class="p-2">
                 <div class="shoe-photo rounded-4 mb-3">
                   <img class="img-fluid short-photo" src="images/Mask Group.png" alt="">
@@ -147,7 +147,7 @@
 
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-xl-4 col-md-6 col-sm-12">
               <div class="p-2">
                 <div class="shoe-photo rounded-4 mb-3">
                   <img class="img-fluid" src="images/Rectangle 38.png" alt="">
@@ -162,6 +162,40 @@
 
 
               </div>
+            </div>
+          </div>
+        </div>
+
+      </section>
+
+      <section class="mt-5">
+        <div class="container px-4">
+          <div class="row w-100 gx-5">
+            <div class="col-md-6 col-lg-6 col-sm-12">
+             <div class="p-3 ">
+              <div class="col-12 d-flex justify-content-between contact mb-3 shadow-sm rounded-4 px-5">
+                <img class="img-fluid " src="icons/image 12.png" alt="">
+                <div><h5>Find The Perfect Fit</h5>
+                  <p>Everybody is different, which is why we <br>
+                    offer styles for every body.</p></div>
+             </div>
+              <div class="col-12 d-flex justify-content-between contact mb-3 shadow-sm rounded-4 px-5">
+                <img class="img-fluid " src="icons/image 13.png" alt="">
+                <div><h5>Free Exchanges</h5>
+                  <p>One of the many reasons you can shop<br>
+                    with peace of mind.</p></div>
+             </div>
+              <div class="col-12 d-flex justify-content-between contact shadow-sm rounded-4 px-5">
+                <img class="img-fluid " src="icons/image 14.png" alt="">
+                <div><h5>Contact our Seller</h5>
+                  <p>They are here to help you. That's quite<br> 
+                    literally what we pay them for.</p></div>
+             </div>
+
+
+            </div></div>
+            <div class="col-md-6 col-lg-6 col-sm-12">
+              <div class="p-3"><img class="img-fluid" src="icons/XMLID 1.png" alt=""></div>
             </div>
           </div>
         </div>
