revese column order

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <section class="mt-5">
         <div class="container px-4">
           <div class="row w-100 gx-5">
-            <div class="col-md-6 col-lg-6 col-sm-12">
+            <div class="col-md-6 col-lg-6 col-sm-12 order-sm-2">
              <div class="p-3 ">
               <div class="col-12 d-flex justify-content-between contact mb-3 shadow-sm rounded-4 px-5">
                 <img class="img-fluid " src="icons/image 12.png" alt="">
@@ -194,7 +194,7 @@
 
 
             </div></div>
-            <div class="col-md-6 col-lg-6 col-sm-12">
+            <div class="col-md-6 col-lg-6 col-sm-12 order-sm-1">
               <div class="p-3"><img class="img-fluid" src="icons/XMLID 1.png" alt=""></div>
             </div>
           </div>
